--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,86 @@
-# Gradle files
-.gradle/
-build/
+# File path: snake_game.py
 
-# Local configuration file (sdk path, etc)
-local.properties
+import pygame
+import time
+import random
 
-# Log/OS Files
-*.log
+# Initialize pygame
+pygame.init()
 
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output.json
+# Screen dimensions
+WIDTH, HEIGHT = 600, 400
+BLOCK_SIZE = 20
+SCREEN = pygame.display.set_mode((WIDTH, HEIGHT))
+pygame.display.set_caption("Snake Game")
 
-# IntelliJ
-*.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
+# Colors
+BLACK = (0, 0, 0)
+WHITE = (255, 255, 255)
+RED = (213, 50, 80)
+GREEN = (0, 255, 0)
+BLUE = (50, 153, 213)
 
-# Keystore files
-*.jks
-*.keystore
+# Clock and font
+CLOCK = pygame.time.Clock()
+FONT = pygame.font.SysFont("bahnschrift", 25)
 
-# Google Services (e.g. APIs or Firebase)
-google-services.json
+# Snake parameters
+snake_speed = 15
 
-# Android Profiling
-*.hprof
+def draw_snake(block_size, snake_body):
+    for segment in snake_body:
+        pygame.draw.rect(SCREEN, GREEN, [segment[0], segment[1], block_size, block_size])
+
+def message(msg, color):
+    mesg = FONT.render(msg, True, color)
+    SCREEN.blit(mesg, [WIDTH // 6, HEIGHT // 3])
+
+def game_loop():
+    game_over = False
+    game_close = False
+
+    # Initial snake settings
+    x, y = WIDTH // 2, HEIGHT // 2
+    x_change, y_change = 0, 0
+    snake_body = []
+    snake_length = 1
+
+    # Initial food location
+    food_x = round(random.randrange(0, WIDTH - BLOCK_SIZE) / BLOCK_SIZE) * BLOCK_SIZE
+    food_y = round(random.randrange(0, HEIGHT - BLOCK_SIZE) / BLOCK_SIZE) * BLOCK_SIZE
+
+    while not game_over:
+
+        while game_close:
+            SCREEN.fill(BLACK)
+            message("You Lost! Press Q-Quit or C-Play Again", RED)
+            pygame.display.update()
+
+            for event in pygame.event.get():
+                if event.type == pygame.KEYDOWN:
+                    if event.key == pygame.K_q:
+                        game_over = True
+                        game_close = False
+                    if event.key == pygame.K_c:
+                        game_loop()
+
+        # Capture user input
+        for event in pygame.event.get():
+            if event.type == pygame.QUIT:
+                game_over = True
+            if event.type == pygame.KEYDOWN:
+                if event.key == pygame.K_LEFT:
+                    x_change = -BLOCK_SIZE
+                    y_change = 0
+                elif event.key == pygame.K_RIGHT:
+                    x_change = BLOCK_SIZE
+                    y_change = 0
+                elif event.key == pygame.K_UP:
+                    x_change = 0
+                    y_change = -BLOCK_SIZE
+                elif event.key == pygame.K_DOWN:
+                    x_change = 0
+                    y_change = BLOCK_SIZE
+
+        # Snake position update
+        if x >= WIDTH or x <
